--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ ul button {
 }
 
 li {
-    background-color:#328CC1;
+    background-color: #328CC1;
     display: flex;
     color: #1D2731;
     align-items: center;
@@ -47,8 +47,12 @@ li {
     border-radius: 4px;
 }
 
+.edit-button {
+    background-color: #D9B310;
+    margin-left: auto; /* Alinea el botón a la derecha */
+}
 .completed {
-    color: greenyellow;
+    color: rgb(3, 253, 107);
 }
 
 .delete-button {
