--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,10 @@ h1 {
     color: white;
 }
 
+button {
+  cursor: pointer;
+}
+
 #ideas-container {
     display: grid;
   	grid-template-columns: 1fr;
@@ -51,6 +55,10 @@ h1 {
   grid-template-columns: repeat(20, 1fr);
   gap: 5px;
   padding: 10px 5px; 
+}
+
+#card-idea:hover {
+  opacity: 0.8;
 }
 
 #card-idea .date {
@@ -81,6 +89,3 @@ h1 {
   	cursor: pointer;
 }
 
-button {
-  cursor: pointer;
-}
